src/test/should_panic/vec_map_one_duplicate.rs
pub fn main() {
    linear_collections_macros::vec_map![("k", "v"), ("k", "v")]
}
